--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to My Website!</h1>
     <p>This site is automatically deployed using GitHub Actions 🚀</p>
+    <p>This site is automatically deployed using GitHub Actions 🚀</p>
 </body>
 </html>
